# nx-monorepo-example

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  nx.json  package.json  pnpm-lock.yaml
cancellations-api/: Cargo.toml  Dockerfile  project.json
cancellations-api/src/: main.rs
order-lifecycle/: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  project.json
order-lifecycle/.sqlx/: query-26ba0576a3ddd708b7277d7808b5914824f938b94ba8a594386ae50418d529ea.json  query-53cbee0761852824472f1100b2a4f9e847bceed7b9cee8434806ff5cd6830774.json  query-5a8f252c059bd8eb2f3b5e25e7dd33452d4cf07684ee545bbabbd4b2c93915f3.json  query-7b8f284f206d77205ee61da8c6f4344d21e1cfbd8eb03db99069f1b61f0b7e89.json  query-8ef1e255001e751f7b639828c2892888b49d0199ff827fd2e0eaf3824fb318cd.json  query-90c02db91cda1ee9150abb7f3f2b3ff819d5e03813abe800de3732288397207d.json  query-93b551b6621deb402bbbc1fb1b77e5dac1d234fe3493765b5f019091addb85d1.json  query-b6ef48952a79d37da45b6810efb0a1080d888c3d7f895e3774a91d17c5d005f6.json  query-b95078e5928616267b57d8fcc70d7deb2d0b6eded00db2adea9661c182a66505.json  query-c81737ac81fb4ca97c419830fed8eac31ffe30ebc62f970ebbeda950e88516b1.json  query-de5c62bd76d92be3f06b9d6602493f92b6878bf97fd4e6a77e501a92d240032a.json  query-e8c159e8d656f755efdebbd9c29eb78c5f7615d4ebdd36c82cbe4e93bd230b14.json
order-lifecycle/migrations/: 20231211100000_create_orders_tables.sql
order-lifecycle/src/: main.rs
order-lifecycle/src/db/: mod.rs  orders.rs  tasks.rs
order-lifecycle/src/fake/: mod.rs
order-lifecycle/src/models/: country.rs  mod.rs  order.rs  task.rs  (+5 more)
(+30 files in other folders)
