[package]
name = "order-lifecycle"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "uuid",
    "json",
    "chrono",
    "macros",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
uuid = { version = "1.1", features = ["serde", "v4"] }
chrono = { version = "0.4.39", features = ["serde"] }
anyhow = { version = "1.0.94" }
dotenv = { version = "0.15" }
itertools = { version = "0.10" }
async-trait = { version = "0.1.83" }
thiserror = { version = "1.0" }
axum = { version = "0.6.0" }
sha2 = { version = "0.10.8" }
rand = { version = "0.8.5" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
